--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
