--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   badges: ^3.1.2
+  carousel_slider: ^4.2.1
+  dotted_border: ^2.1.0
+  file_picker: ^6.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
